syntax = "proto3";

package wordcorrector;

option go_package = "../gen";

service WordCorrector {
  rpc CorrectWord(CorrectWordRequest) returns (CorrectWordResponse);
}

message CorrectWordRequest {
  string corrupted_word = 1; 
}

message CorrectWordResponse {
  string corrected_word = 1;
  bool found = 2;
}
